# Music_Player

./: CMakeLists.txt  README.md
MEDIA_PLAYER/: SongHistory.cpp  Trackqueue.cpp  mediaplayer.cpp  playlist.cpp
